--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^1.3.3",
+    "@ai-sdk/google": "^1.2.1",
+    "@lightenna/react-mermaid-diagram": "^1.0.17",
+    "@octokit/rest": "^21.1.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
@@ -22,18 +28,28 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/react-file-icon": "^1.0.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "ai": "^4.2.0",
     "bcrypt-ts": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "geist": "1.1.0",
+    "jotai": "^2.12.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.482.0",
+    "marked": "^15.0.7",
+    "mermaid": "^11.6.0",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-file-icon": "^1.6.0",
     "react-loader-spinner": "^6.1.6",
+    "react-syntax-highlighter": "^15.6.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
